English Dolibarr ChangeLog

***** ChangeLog for 2.9 compared to 2.8 *****

For users:
- New: Support "Department/State" field on contact and members card.
- New: Can reopen a refused/canceled supplier order.
- New: Add Gant diagramm on project module.
- New: Add a new mode for automatic stock increase: Can be increased
  on supplier order dispatching of products.
- New: Can set a past delay to limit calendar export.
- New: Can join files on emailing campaigns.
- New: Add statistics on trips and expenses module.
- New: Can reopen a closed customer order.
- New: Add module externalsite to add a web site/tools inside 
       menu and a Dolibarr frame.
- New: Can link trips and fees to a project.
- New: Add civility title in foundation module.
- New: Can set accountancy code for product (buy and sell).
- New: Can filter third parties lists on categories.
- New: Can filter products and services lists on categories.
- New: task #10202 : Support categories for members.
- New: Can build documents for third parties (Use ODT templates, need PHP 5.2+). 
- New: Support products property length and area.
- New: Add "payment due before" field in invoice exports
- New: Add feature to resize or crop image files (for products photos)
- New: task #10113 : Show list of emailing on clicking on "number of mass emailing received"
- New: Add default language for third parties and use it when multilang is enabled
       to define default language for document generation.
- New: Can reopen a closed supplier invoice.
- New: Move permission "see hidden categories" into "see hidden products/services".
- New: Can delete several files at once in FTP module.
- New: Add box "last contracts".
- New: Works even if Web hosting provider has disabled glob function.
- New: Can now send supplier order by mail.
- New: task #10076 : Show content of message in notification module.
- Fix: Debug experimental module widthrawal.
- Fix: Format number was wrong for ar_AR language.