@@ -1,6 +1,6 @@
 <?php
 /* Copyright (C) 2007-2008 Jeremie Ollivier      <jeremie.o@laposte.net>
- * Copyright (C) 2008-2009 Laurent Destailleur   <eldy@uers.sourceforge.net>
+ * Copyright (C) 2008-2010 Laurent Destailleur   <eldy@uers.sourceforge.net>
  * Copyright (C) 2009      Regis Houssin         <regis@dolibarr.fr>
  *
  * This program is free software; you can redistribute it and/or modify
@@ -32,6 +32,7 @@ if (!empty($conf->global->CASHDESK_ID_BANKACCOUNT_CASH))
 {
 	$bankcash=new Account($db);
 	$bankcash->fetch($conf->global->CASHDESK_ID_BANKACCOUNT_CASH);
+	$bankcash->label=$bankcash->ref;
 	$bankcashLink = $bankcash->getNomUrl(1);
 }
 if (!empty($conf->global->CASHDESK_ID_BANKACCOUNT_CB))
@@ -46,10 +47,10 @@ if (!empty($conf->global->CASHDESK_ID_BANKACCOUNT_CHEQUE))
 	$bankcheque->fetch($conf->global->CASHDESK_ID_BANKACCOUNT_CHEQUE);
 	$bankchequeLink = $bankcheque->getNomUrl(1);
 }
-if (!empty($conf->global->CASHDESK_ID_WAREHOUSE) && $conf->stock->enabled)
+if (!empty($_SESSION["CASHDESK_ID_WAREHOUSE"]) && $conf->stock->enabled)
 {
 	$warehouse=new Entrepot($db);
-	$warehouse->fetch($conf->global->CASHDESK_ID_WAREHOUSE);
+	$warehouse->fetch($_SESSION["CASHDESK_ID_WAREHOUSE"]);
 	$warehouseLink = $warehouse->getNomUrl(1);
 }
 
@@ -70,7 +71,7 @@ print $langs->trans("CashDeskThirdParty").': '.$companyLink.'<br>';
 print $langs->trans("CashDeskBankCash").': '.$bankcashLink.'<br>';
 print $langs->trans("CashDeskBankCB").': '.$bankcbLink.'<br>';
 print $langs->trans("CashDeskBankCheque").': '.$bankchequeLink.'<br>';
-if (!empty($conf->global->CASHDESK_ID_WAREHOUSE) && $conf->stock->enabled)
+if (!empty($_SESSION["CASHDESK_ID_WAREHOUSE"]) && $conf->stock->enabled)
 {
 	print $langs->trans("CashDeskWarehouse").': '.$warehouseLink;
 }
